--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://rc0909.github.io/1",
+  "homepage": "https://bhch09.github.io/x",
   "name": "react-javascript",
   "version": "1.0.0",
   "type": "module",
